Fix searchIcon grid overlapping page

--- a/client/src/components/Searchbar.css
+++ b/client/src/components/Searchbar.css
@@ -20,7 +20,7 @@
 }
 
 .searchIcon {
-    height: 60px;
+    height: 50px;
     width: 50px;
     background-color: white;
     display: grid;
